//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  likes Like [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
  likes Like [not null]
}

Table Like {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  postId String [not null]
  post Post [not null]
  user User [not null]

  indexes {
    (userId, postId) [unique]
  }
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Like.postId > Post.id [delete: Cascade]

Ref: Like.userId > User.id [delete: Cascade]